# Core

./: .gitignore  .gitmodules  BUILDING.md  BuildTemplate  CHANGES.md  CHUNKPOOL_REFACTORING_SUMMARY.md  CMakeLists.txt  Core.bb  CoreConfig.cmake.in  IMPLEMENTATION_STATUS.md  IPC_OPTIMIZATION_PLAN.md  IPC_PERFORMANCE_COMPARISON.md  IPC_TEST_RESULTS.md  MESSAGEQUEUE_REFACTOR_SUMMARY.md  README.md  README_CN.md  RELEASE_NOTES.md  RELEASE_NOTES_CN.md  build.sh  main.cpp
doc/: BENCHMARK_REPORT.md  DUAL_COUNTER_ANALYSIS.md  DUAL_COUNTER_PROGRESS.md  DUAL_COUNTER_REFACTORING_PLAN.md  HMAC_SECRET_CONFIG.md  ICEORYX2_COMPLETE_IMPLEMENTATION.md  ICEORYX2_VS_EPOLL.md  INDEX.md  INDEX.md.backup  IPC_DESIGN_ARCHITECTURE.md  IPC_IMPLEMENTATION_ROADMAP.md  JEMALLOC_VS_MALLOC_COMPARISON.md  LOCK_FREE_ICEORYX2_IMPLEMENTATION.md  MEMORY_MANAGEMENT_GUIDE.md  MEMORY_ORDERING_VERIFICATION.md  MEMORY_POOL_CONFIG_MIGRATION.md  MEMORY_POOL_CONFIG_VERIFICATION.md  MEMORY_POOL_GROWTH_QUICK_REFERENCE.md  MEMORY_POOL_QUICK_CARD.md  MEMORY_REFACTORING_SUMMARY_2025-11-12.md  PHASE1_COMPLETION_REPORT.md  QUICK_START.md  R24_11_FEATURES_COMPLETION_REPORT.md  README.md  SHARED_MEMORY_CONCURRENCY_ANALYSIS.md  SHM_ARCHITECTURE_ANALYSIS.md  SHM_IMPLEMENTATION_SUMMARY.md  SHM_MEMORY_ARCHITECTURE.md  THIRD_PARTY.md  WAIT_MECHANISM_FIX.md
doc/archive/: AUTOSAR_UTILITIES_SUMMARY.md  CAbort_Refactoring_Summary.md  ERRORDOMAIN_AUTOSAR_COMPLIANCE.md  ERROR_DOMAIN_LIFECYCLE_IMPROVEMENT.md  IMPROVEMENT_PROPOSAL.md  IMP_OPERATOR_NEW_SUMMARY.md  IMP_OPERATOR_NEW_TEST_REPORT.md  JEMALLOC_VERIFICATION.md  Phase1_COMPLETION_REPORT.md  README.md  alignment_optimization_summary.md  memory_alignment_audit.md
doc/memory/: CHANGELOG_v0.3.0.md  DESIGN_CONSISTENCY_REPORT.md  IMPLEMENTATION_PLAN_v0.3.0.md  MEMORY_MANAGEMENT_GUIDE.md  README.md  REFACTORING_PLAN_JEMALLOC.md
doc/reports/: CODE_CLEANUP_REPORT.md  ID_HANDLE_VALIDATION_SUMMARY.md  TEST_STRUCTURE_CLEANUP.md
source/inc/: CAbort.hpp  CAlgorithm.hpp  CByteOrder.hpp  CConfig.hpp  CCore.hpp  CCoreErrorDomain.hpp  CCrypto.hpp  CErrorCode.hpp  CErrorDomain.hpp  CException.hpp  CFile.hpp  CFunction.hpp  CFuture.hpp  CFutureErrorDomain.hpp  CInitialization.hpp  CInstanceSpecifier.hpp  CLockFreeQueue.hpp  CMacroDefine.hpp  CMemory.hpp  CMemoryAllocator.hpp  CMemoryManager.hpp  COptional.hpp  CPath.hpp  CPromise.hpp  CRawAtomic.hpp  CResult.hpp  CSpan.hpp  CString.hpp  CSync.hpp  CTime.hpp  CTimer.hpp  CTypedef.hpp  CUtility.hpp  CVariant.hpp  CViolation.hpp  IPCFactory.hpp
source/src/: CAbort.cpp  CConfig.cpp  CCore.cpp  CCrypto.cpp  CInitialization.cpp  CMemory.cpp  CMemoryManager.cpp  CViolation.cpp  IPCFactory.cpp
test/: README.md  SHM_TEST_COVERAGE.md  check_alignment.cpp  enable_memory_pool.cpp  run_all_tests.sh  run_memory_tests.sh  run_shm_tests.sh  set_memory_config.cpp
test/benchmark/: PROMETHEUS_INTEGRATION.md  README_STRESS_TESTS.md  alignment_performance_test.cpp  benchmark_lockfree_completion_queue.cpp  build_devzero_test.sh  devzero_stress_test.cpp  memory_stress_test.cpp  overnight_stress_test.cpp  overnight_stress_test.sh  pool_vs_system_benchmark.cpp  publisher_process.cpp  quick_test.sh  stress_test.sh  subscriber_process.cpp  system_malloc_comparison_test.cpp  test_multithread_broadcast.cpp  verify_prometheus_metrics.sh
test/examples/: abort_example.cpp  check_alignment.cpp  config_example.cpp  config_example_v4.cpp  config_policy_example.cpp  config_update_policy_test.cpp  config_verification_test.cpp  crypto_test.cpp  direct_alignment_test.cpp  event_example.cpp  global_operator_test.cpp  initialization_example.cpp  memory_example.cpp  memory_example_comprehensive.cpp  memory_leak_intentional_test.cpp  memory_leak_multithread_test.cpp  simple_init_test.cpp  test_auto_update_policy.cpp  test_core_classes.cpp  test_default_policy_load.cpp  test_dynamic_magic.cpp  test_event_basic.cpp  test_functional_classes.cpp  test_jemalloc_integration.cpp  test_memory_allocator.cpp  test_memory_allocator_debug.cpp  test_violation.cpp
test/ipc/: CAMERA_FUSION_README.md  LoggingHooks.hpp  StatisticsHooks.hpp  basic_pubsub_example.cpp  benchmark_ipc_latency.cpp  benchmark_ipc_throughput.cpp  camera_fusion_example.cpp  camera_fusion_mpmc_example.cpp  camera_fusion_mpsc_example.cpp  camera_fusion_spmc_example.cpp  camera_fusion_spsc_example.cpp  debug_ipc.cpp  end_to_end_example.cpp  example_broadcast_spmc.cpp  example_simple_spsc.cpp  example_zerocopy_spsc.cpp  hooks_demo.cpp  ipc_chain_example.cpp  ipc_service_example.cpp  property_board_example.cpp  run_cross_process_test.sh  stress_test_extend.cpp  stress_test_normal.cpp  stress_test_shrink.cpp  test_ChunkPoolAllocator.cpp  test_Publisher_Subscriber.cpp  test_RingBufferBlock.cpp  test_SharedMemoryManager.cpp  test_controlblock_size.cpp  test_debug.cpp  test_init.cpp  test_ipc_extend.cpp  test_ipc_normal.cpp  test_ipc_shrink.cpp  test_nomove.cpp  test_publisher_only.cpp  test_pubsub.cpp  test_registry.cpp  test_simple.cpp  test_spmc.cpp  (+1 more)
test/unittest/: config_test.cpp  test_abort_v2.cpp  test_alignment_verification.cpp  test_autosar_containers.cpp  test_autosar_utilities.cpp  test_crypto_key_providers.cpp  test_error_domain.cpp  test_exception.cpp  test_exception_assign_noexcept.cpp  test_file.cpp  test_future_basic.cpp  test_initialization.cpp  test_instance_specifier.cpp  test_ipc_factory.cpp  test_ipc_publisher.cpp  test_ipc_subscriber.cpp  test_lockfree_queue.cpp  test_main.cpp  test_memory.cpp  test_memory_allocator.cpp  test_memory_serialization.cpp  test_noexcept_extended.cpp  test_pair.cpp  test_path.cpp  test_promise_errors.cpp  test_result_basic.cpp  test_result_full.cpp  test_shm_allocator.cpp.old  test_span_full.cpp  test_string.cpp  test_stringview_r24.cpp  test_sync.cpp  test_time_timer.cpp  test_typedef_allocator.cpp  (+1 more)
tools/: README.md  check_stress_progress.sh  check_test_status.sh  config_editor.py  example_usage.sh  monitor_overnight_test.sh  run_4hour_stress.sh  run_devzero_multiproc.sh  run_devzero_test.sh  run_overnight_test.sh  test_duration.sh  test_lockfree_optimization.sh
(+59 files in other folders)
